--- a/FFXIVPlayerWardrobe/Properties/Resources.resx
+++ b/FFXIVPlayerWardrobe/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="enpcbase_exh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\enpcbase.exh.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="enpcresident_exh_en" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\enpcresident.exh_en.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="item_exh_en" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\item.exh_en.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
