--- a/FFXIVPlayerWardrobe/Properties/Resources.resx
+++ b/FFXIVPlayerWardrobe/Properties/Resources.resx
@@ -5593,4 +5593,7 @@
   <data name="_136894_tex" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\136894.tex.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="human" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\human.cmp;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
